# triz-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TRIZ_Claude_Code_Plugin_Master_Report.docx
triz-engine/: .mcp.json  LEADERBOARD.md  conftest.py  mcp-standalone.json  pyproject.toml
triz-engine/.claude-plugin/: plugin.json
triz-engine/agents/: contradiction-agent.md  evaluator-agent.md  solution-agent.md
triz-engine/benchmark/: _plugin_toggle.py  elo.py  leaderboard.py  runner.py  scorer.py
triz-engine/benchmark/applied/: problems.json
triz-engine/benchmark/participants/: cot-augmented.json  gemini-triz.json  gpt4o-triz.json  tot-augmented.json  triz-engine.json  triz-prompt-only.json  vanilla-claude.json
triz-engine/benchmark/problems/: TB-01.json  TB-02.json  TB-03.json  (+9 more)
triz-engine/commands/: analyze.md  ariz.md  benchmark.md  ifr.md  matrix.md  principles.md
triz-engine/data/: separation-principles.json  triz-knowledge-base.json  triz-matrix.json
triz-engine/docs/: example-tb01-cap-theorem.md  example-tb02-auth-friction.md  example-tb12-ai-safety.md  glossary.md
triz-engine/hooks/: post-tool-use.json  pre-tool-use.json
triz-engine/ratings/: latest.json
triz-engine/results/: external-benchmarks-summary.json  stage1_summary.json  stage2_summary.json
triz-engine/servers/: triz_server.py
triz-engine/skills/: triz-core.md
triz-engine/tests/: test_benchmark_problems.py  test_elo.py  test_external_benchmarks.py  test_knowledge_base.py  test_leaderboard.py  test_matrix.py  test_mcp_live.py  test_scorer.py  test_separation.py  test_server.py
(+105 files in other folders)
